<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_editor_layout"
        tools:context=".EditorProductActivity">

        <EditText
            android:id="@+id/product_name_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/product_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/price_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/quantity_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/supplier_name_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/supplier_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/supplier_phone_number_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_phone_number_hint"
            android:inputType="phone" />
    </LinearLayout>
</layout>